@@ -2,7 +2,6 @@ package com.conkiri.domain.ticketing.entity;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum Section {
 
@@ -11,7 +10,7 @@ public enum Section {
 	public static List<String> getSections() {
 		return Arrays.stream(values())
 			.map(Enum::name)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public static boolean isValidSection(String section) {
